--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -35,7 +35,7 @@ menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Download a demo"		[ showmenu "Download demo" ]
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
-menuitem "4Browse the servers..."	[ showmenu "Disconnect?" ]
+menuitem "4Browse servers..."	[ showmenu "Disconnect?" ]
 menuitem "3Quit AssaultCube"		"savequit"
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
@@ -54,7 +54,7 @@ menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
-menuitem "4Browse the servers..."	[ showmenu "Disconnect?" ]
+menuitem "4Browse servers..."	[ showmenu "Disconnect?" ]
 menuitem "3Quit AssaultCube"		"savequit"
 
 // Multiplayer menu only opens through the main menu (when disconnected).
