new maprot with all maps (gamemodes selected by playernumber)
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3544 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -25,30 +25,32 @@
 // minplayer and maxplayer numbers are only checked when a new game is picked from the map rotation.
 // If the player number changes during gameplay, no action will be taken.
 
-// tdm
-ac_urban:0:15:1
-ac_keller:0:15:1
-ac_shine:0:15:1
-ac_scaffold:0:15:1
-
-// ctf
-ac_mines:5:15:1
-ac_depot:5:15:1
-ac_power:5:15:1:3       // skip, if <3 players
-ac_elevation:5:15:1
-ac_sunset:5:15:1
-ac_desert3:5:15:1
-
-// dm
-ac_toxic:2:10:1
-ac_complex:2:10:1
-ac_snow:2:10:1
-ac_arctic:2:10:1
-
-// osok
-ac_desert2:10:10:1:0:6    // skip, if >6 players
-ac_desert:10:10:1
-ac_scaffold:10:10:1
-
+ac_scaffold:0:10:1:3       // tdm, 10 minutes, >2 players
+ac_power:5:12:1:4:15       // ctf, 12 minutes, 4..15 players
+ac_desert:2:8:1:0:6        // dm, 8 minutes, <7 players
+ac_keller:13:12:1:9        // htf, 12 minutes, >8 players
+ac_arctic:11:10:1:5        // tosok, 10 minutes, >4 players
+ac_elevation:5:12:1:4:10   // ctf, 12 minutes, 4..10 players
+ac_toxic:0:10:1:3          // tdm, 10 minutes, >2 players
+ac_urban:0:10:1:3          // tdm, 10 minutes, >2 players
+ac_power:13:12:1:9         // htf, 12 minutes, >8 players
+ac_desert3:5:12:1:4:10     // ctf, 12 minutes, 4..10 players
+ac_mines:13:12:1:9         // htf, 12 minutes, >8 players
+ac_desert2:0:10:1:3        // tdm, 10 minutes, >2 players
+ac_depot:5:12:1:4:12       // ctf, 12 minutes, 4..12 players
+ac_snow:10:8:1:0:5         // osok, 8 minutes, <6 players
+ac_shine:5:12:1:4:10       // ctf, 12 minutes, 4..10 players
+ac_complex:0:10:1:3        // tdm, 10 minutes, >2 players
+ac_scaffold:11:10:1:5      // tosok, 10 minutes, >4 players
+ac_snow:2:8:1:0:6          // dm, 8 minutes, <7 players
+ac_keller:5:12:1:4:15      // ctf, 12 minutes, 4..15 players
+ac_arctic:0:10:1:3         // tdm, 10 minutes, >2 players
+ac_mines:5:12:1:4:10       // ctf, 12 minutes, 4..10 players
+ac_desert:9:8:1:0:5        // lss, 8 minutes, <6 players
+ac_sunset:5:12:1:4:10      // ctf, 12 minutes, 4..10 players
+ac_shine:13:12:1:9         // htf, 12 minutes, >8 players
+ac_desert:11:10:1:5        // tosok, 10 minutes, >4 players
 
 // Change this file to make the map rotation different and add more..
+// do only use standard maps and maps from your packages/maps/servermaps folder!
+
