--- a/ac/config/maprot.cfg
+++ b/ac/config/maprot.cfg
@@ -7,6 +7,7 @@
 
 // map: map filename without extension
 //      do only use standard maps and maps from your packages/maps/servermaps folder
+//      for the flag modes (5, 14 & 15), be sure, the map contains flag bases
 
 // mode: Team Deathmatch (0), Deathmatch (2), Pistol Frenzy (6),
 //       Capture the Flag (5), Hunt the Flag (13), Keep the Flag (15), Team Keep the Flag (14),
@@ -29,10 +30,10 @@ ac_scaffold:0:10:1:3       // tdm, 10 minutes, >2 players
 ac_power:5:12:1:4:15       // ctf, 12 minutes, 4..15 players
 ac_desert:2:8:1:0:6        // dm, 8 minutes, <7 players
 ac_keller:13:12:1:9        // htf, 12 minutes, >8 players
-ac_arctic:11:10:1:5        // tosok, 10 minutes, >4 players
+ac_arctic:11:10:1:7        // tosok, 10 minutes, >6 players
 ac_elevation:5:12:1:4:10   // ctf, 12 minutes, 4..10 players
-ac_toxic:0:10:1:3          // tdm, 10 minutes, >2 players
-ac_urban:0:10:1:3          // tdm, 10 minutes, >2 players
+ac_toxic:0:10:1:4          // tdm, 10 minutes, >3 players
+ac_urban:0:10:1:5          // tdm, 10 minutes, >4 players
 ac_power:13:12:1:9         // htf, 12 minutes, >8 players
 ac_desert3:5:12:1:4:10     // ctf, 12 minutes, 4..10 players
 ac_mines:13:12:1:9         // htf, 12 minutes, >8 players
@@ -41,15 +42,15 @@ ac_depot:5:12:1:4:12       // ctf, 12 minutes, 4..12 players
 ac_snow:10:8:1:0:5         // osok, 8 minutes, <6 players
 ac_shine:5:12:1:4:10       // ctf, 12 minutes, 4..10 players
 ac_complex:0:10:1:3        // tdm, 10 minutes, >2 players
-ac_scaffold:11:10:1:5      // tosok, 10 minutes, >4 players
+ac_scaffold:11:10:1:6      // tosok, 10 minutes, >5 players
 ac_snow:2:8:1:0:6          // dm, 8 minutes, <7 players
 ac_keller:5:12:1:4:15      // ctf, 12 minutes, 4..15 players
-ac_arctic:0:10:1:3         // tdm, 10 minutes, >2 players
+ac_arctic:0:10:1:4         // tdm, 10 minutes, >3 players
 ac_mines:5:12:1:4:10       // ctf, 12 minutes, 4..10 players
 ac_desert:9:8:1:0:5        // lss, 8 minutes, <6 players
 ac_sunset:5:12:1:4:10      // ctf, 12 minutes, 4..10 players
 ac_shine:13:12:1:9         // htf, 12 minutes, >8 players
-ac_desert:11:10:1:5        // tosok, 10 minutes, >4 players
+ac_desert:11:10:1:6        // tosok, 10 minutes, >5 players
 
 // Change this file to make the map rotation different and add more..
 // do only use standard maps and maps from your packages/maps/servermaps folder!
