fixed broken demo downloading
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3625 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -32,7 +32,7 @@ menuitem "" -1
 menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
-menuitem "Download a demo"		[ showmenu "Download demo" ]
+menuitem "Download a demo"		[ listdemos; showmenu "Download demo" ]
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
 menuitem "4Browse servers..."	[ showmenu "Disconnect?" ]
