updated defaultmapsettings with toca's models
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3636 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -144,7 +144,23 @@ mapmodel 0 1 0 0 "toca/pipes/metalpipe2"	// 110
 mapmodel 0 0 0 0 "signs/arab"			// 111	Note: This model was made before version 1.0
 mapmodel 1 1 0 0 "toca/milkcrate"		// 112
 mapmodel 0 0 0 0 "toca/ceilingfan"		// 113
-
+mapmodel 1 7 0 0 "toca/tree1"			// 114
+mapmodel 0 17 0 0 "toca/palmtree1"		// 115 
+mapmodel 2 3 0 0 "toca/razorwire"		// 116
+mapmodel 0 14 0 0 "toca/tree2"			// 117
+mapmodel 0 18 0 0 "toca/pine"			// 118
+mapmodel 2 7 0 0 "toca/servercluster/rack"	// 119
+mapmodel 2 1 0 0 "toca/servercluster/U3_1"	// 120
+mapmodel 2 1 0 0 "toca/servercluster/U3_2"	// 121
+mapmodel 2 1 0 0 "toca/servercluster/U3_3"	// 122
+mapmodel 2 2 0 0 "toca/servercluster/U6_1"	// 123
+mapmodel 2 2 0 0 "toca/servercluster/U6_2"	// 124
+mapmodel 2 2 0 0 "toca/servercluster/U6_3"	// 125
+mapmodel 0 4 0 0 "toca/window1"			// 126
+mapmodel 1 2 8 0 "toca/barbwire"		// 127
+mapmodel 1 1 0 0 "toca/shelf"			// 128
+mapmodel 4 1 15 0 "toca/guardtower"		// 129
+mapmodel 1 2 0 0 "toca/treetrunk1"		// 130
 
 
 // The models below are specific to the maps that they were made for and won't be of much or any use in other maps.
@@ -173,14 +189,6 @@ mapmodel 0 0 0 0 "toca/ceilingfan"		// 113
 // mapmodel 3 1 7 0 "toca/stairs_aqueous/stairs2"
 						// Special stairs platforms with handrails. Specific to ac_aqueous. 
 						// This model requires careful clipping to be used.
-
-// These plant mapmodels by toca, are currently still in testing...
-// mapmodel 0 0 0 0 "toca/bush1"
-// mapmodel 0 0 0 0 "toca/palmtree"
-// mapmodel 0 0 0 0 "toca/smallpalm"
-// mapmodel 0 0 0 0 "toca/tree1"
-// mapmodel 0 0 0 0 "toca/tree2"
-// mapmodel 1 19 0 0 "toca/pine"			
 
 
 // The skymap for this map. You can change this by commenting the one below, and then uncommenting one of your choosing
@@ -557,44 +565,44 @@ texture 0 "./drunkenM/rock_wall1.jpg"			// Texture #249
 mapsoundreset	// Ambient sounds. Leave this command here, or else your sounds will mess up!
 
 mapsound "./ambience/cavedrip.ogg" -1		//0
-mapsound "./ambience/distant_cars.ogg" -1	//1
-mapsound "./ambience/hum01.ogg" -1		//2
-mapsound "./ambience/hum02.ogg" -1		//3
-mapsound "./ambience/night_crickets.ogg" -1	//4
-mapsound "./ambience/water.ogg" -1		//5
-mapsound "./ambience/wind.ogg" -1		//6
-mapsound "./ambience/t_aircond.ogg" -1		//7
-mapsound "./ambience/t_compressor.ogg" -1	//8
-mapsound "./ambience/t_crow.ogg" -1		//9
-mapsound "./ambience/t_dogs01.ogg" -1		//10
-mapsound "./ambience/t_helicopter.ogg" -1	//11
-mapsound "./ambience/t_hum01.ogg" -1		//12
-mapsound "./ambience/t_hum02.ogg" -1		//13
-mapsound "./ambience/t_hum03.ogg" -1		//14
-mapsound "./ambience/t_hum04.ogg" -1		//15
-mapsound "./ambience/t_night_dog.ogg" -1	//16
-mapsound "./ambience/t_night01.ogg" -1		//17
-mapsound "./ambience/t_night02.ogg" -1		//18
-mapsound "./ambience/t_radio_comms.ogg" -1	//19
-mapsound "./ambience/t_radio_static.ogg" -1	//20
-mapsound "./ambience/t_satcoms.ogg" -1		//21
-mapsound "./ambience/t_sludge.ogg" -1		//22
-mapsound "./ambience/t_static01.ogg" -1		//23
-mapsound "./ambience/t_static02.ogg" -1		//24
-mapsound "./ambience/t_vent01.ogg" -1		//25
-mapsound "./ambience/t_vent02.ogg" -1		//26
-mapsound "./ambience/t_water_owl.ogg" -1	//27
-mapsound "./ambience/t_water01.ogg" -1		//28
-mapsound "./ambience/t_waterdrip.ogg" -1	//29
-mapsound "./ambience/t_wind.ogg" -1		//30
-mapsound "./ambience/t_waterpipe01.ogg" -1	//31
-mapsound "./ambience/t_waterpipe02.ogg" -1	//32
-mapsound "./ambience/warningalarm01.ogg" -1	//33
-mapsound "./ambience/t_gastank.ogg" -1		//34
-mapsound "./ambience/t_keyboard.ogg" 1		//35 - For use with computer/keyboard mapmodels.
-mapsound "./ambience/t_factory01.ogg" -1	//36
-mapsound "./ambience/t_vents.ogg" -1		//37
-mapsound "./ambience/t_waterfront.ogg" -1	//38
-mapsound "./ambience/t_generator.ogg" -1	//39
-mapsound "./ambience/t_electricbuzz.ogg" -1	//40
-mapsound "./ambience/t_alarm01.ogg" -1		//41
+mapsound "./ambience/distant_cars.ogg" -1	// 1
+mapsound "./ambience/hum01.ogg" -1		// 2
+mapsound "./ambience/hum02.ogg" -1		// 3
+mapsound "./ambience/night_crickets.ogg" -1	// 4
+mapsound "./ambience/water.ogg" -1		// 5
+mapsound "./ambience/wind.ogg" -1		// 6
+mapsound "./ambience/t_aircond.ogg" -1		// 7
+mapsound "./ambience/t_compressor.ogg" -1	// 8
+mapsound "./ambience/t_crow.ogg" -1		// 9
+mapsound "./ambience/t_dogs01.ogg" -1		// 10
+mapsound "./ambience/t_helicopter.ogg" -1	// 11
+mapsound "./ambience/t_hum01.ogg" -1		// 12
+mapsound "./ambience/t_hum02.ogg" -1		// 13
+mapsound "./ambience/t_hum03.ogg" -1		// 14
+mapsound "./ambience/t_hum04.ogg" -1		// 15
+mapsound "./ambience/t_night_dog.ogg" -1	// 16
+mapsound "./ambience/t_night01.ogg" -1		// 17
+mapsound "./ambience/t_night02.ogg" -1		// 18
+mapsound "./ambience/t_radio_comms.ogg" -1	// 19
+mapsound "./ambience/t_radio_static.ogg" -1	// 20
+mapsound "./ambience/t_satcoms.ogg" -1		// 21
+mapsound "./ambience/t_sludge.ogg" -1		// 22
+mapsound "./ambience/t_static01.ogg" -1		// 23
+mapsound "./ambience/t_static02.ogg" -1		// 24
+mapsound "./ambience/t_vent01.ogg" -1		// 25
+mapsound "./ambience/t_vent02.ogg" -1		// 26
+mapsound "./ambience/t_water_owl.ogg" -1	// 27
+mapsound "./ambience/t_water01.ogg" -1		// 28
+mapsound "./ambience/t_waterdrip.ogg" -1	// 29
+mapsound "./ambience/t_wind.ogg" -1		// 30
+mapsound "./ambience/t_waterpipe01.ogg" -1	// 31
+mapsound "./ambience/t_waterpipe02.ogg" -1	// 32
+mapsound "./ambience/warningalarm01.ogg" -1	// 33
+mapsound "./ambience/t_gastank.ogg" -1		// 34
+mapsound "./ambience/t_keyboard.ogg" 1		// 35 - For use with computer/keyboard mapmodels.
+mapsound "./ambience/t_factory01.ogg" -1	// 36
+mapsound "./ambience/t_vents.ogg" -1		// 37
+mapsound "./ambience/t_waterfront.ogg" -1	// 38
+mapsound "./ambience/t_generator.ogg" -1	// 39
+mapsound "./ambience/t_electricbuzz.ogg" -1	// 40
+mapsound "./ambience/t_alarm01.ogg" -1		// 41
