added serverdesc to admin menu
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3637 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -1,19 +1,6 @@
 // Decides whether to open the admin or normal in-game menu.
 alias ingamemenu [ if (currole 1) [ showmenu "In-game admin" ] [ showmenu In-game ] ]
 
-// Ask the player if he wants to disconnect when checking servers...
-newmenu "Disconnect?"
-
-menuitem "Yes" [ disconnect
-		closemenu In-game 
-		closemenu "In-game admin"
-		closemenu "Disconnect?"
-		showmenu main
-		showmenu multiplayer
-		joinservermenu
-		] [ echo 3Disconnect from the current game first? ]
-menuitem "No"  [ closemenu "Disconnect?"; joinservermenu ]
-
 // "Join server" menu.
 alias joinservermenu [ searchlan 1
 		showallservers 1
@@ -35,7 +22,8 @@ menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Download a demo"		[ listdemos; showmenu "Download demo" ]
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu In-game; showmenu main ]
-menuitem "4Browse servers..."	[ showmenu "Disconnect?" ]
+menuitem "4Browse servers..."		[ closemenu "In-game"; joinservermenu ]
+menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
 
 // In-game menu that opens if when you press escape if you're admin state and connected to a game.
@@ -45,6 +33,7 @@ menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
+menuitem "Change the server description" "saycommand /servdesc "
 menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
@@ -54,7 +43,8 @@ menuitem "Change player skin"          [showmenu (at [CLA RVSF] (curteam))]
 menuitem "Demos"			"showmenu Demo"
 menuitem "" -1
 menuitem "4Main menu..."		[ closemenu "In-game admin"; showmenu main ]
-menuitem "4Browse servers..."	[ showmenu "Disconnect?" ]
+menuitem "4Browse servers..."		[ closemenu "In-game admin"; joinservermenu ]
+menuitem "3Disconnect from server"	"disconnect"
 menuitem "3Quit AssaultCube"		"savequit"
 
 // Multiplayer menu only opens through the main menu (when disconnected).
@@ -86,6 +76,13 @@ menuitemtextinput "Server port (optional):	"		"" "alias acc2 $arg1"
 menuitemtextinput "Server admin password: 	"		"" "alias acc3 $arg1"
 menuitem "" -1
 menuitem "2	      [ Admin connect ]		" "connectadmin $acc1 $acc2 $acc3"
+
+newmenu "Server description"
+
+menuinit [ alias serverdesctext ""; echo "3This will change the server description (in-between the suffixes specified by the server owner) to what you choose for one game only." ]	// Resets the aliases
+menuitemtextinput "Server description: 		"		"" "alias serverdesctext $arg1"   
+menuitem "" -1
+menuitem "2      [ Change server description ]	" "serverdesc $serverdesctext"
 
 
 newmenu kick/ban
