Updated editing menu to reflect toca's models.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3639 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -134,6 +134,7 @@ menuitem "Plants"     		"showmenu Plants"
 menuitem "Lights"     		"showmenu Lights" 
 menuitem "Street"     		"showmenu Street"
 menuitem "Office"   		"showmenu Office"
+menuitem "Computers"		"showmenu Computers"
 menuitem "Home"			"showmenu Home"
 menuitem "Industrial" 		"showmenu Industrial"
 menuitem "Military"		"showmenu Military"
@@ -169,7 +170,10 @@ menuitem "Plasma TV"		"newent mapmodel 72"
 menuitem "Power meter"		"newent mapmodel 74"
 menuitem "Rack"			"newent mapmodel 75"
 menuitem "Utility table"	"newent mapmodel 87"
-menuitem "Ceiling fan"		"saycommand /newent mapmodel 113"
+menuitem "Ceiling fan"		"saycommand /newent mapmodel 113" 
+// The ceiling fan model is repeated in the "office" menu so it's easy to find, as it could be either office or home.
+menuitem "Window"		"newent mapmodel 126"
+menuitem "Shelf"		"newent mapmodel 128"
 
 newmenu Military
 
@@ -177,6 +181,23 @@ menuitem "Bullet"		"newent mapmodel 61"
 menuitem "Shotgun shell"	"newent mapmodel 78"
 menuitem "Target"		"newent mapmodel 100"
 menuitem "Radar console"	"newent mapmodel 76"
+menuitem "Razor wire"		"newent mapmodel 116"
+menuitem "Guard tower"		"newent mapmodel 129" [ echo "3This mapmodel will need to be properly clipped!" ]
+
+newmenu Computers
+
+menuitem "Laptop"     			"newent mapmodel 28"
+menuitem "PC"				"newent mapmodel 101"
+menuitem "Computer interfaces"		"newent mapmodel 65"
+menuitem "Communications rack"		"newent mapmodel 63"
+menuitem "Communications rack 2"	"newent mapmodel 64"
+menuitem "Server rack"			"newent mapmodel 119"
+menuitem "Server cluster 1"		[ saycommand "/newent mapmodel 120" ]
+menuitem "Server cluster 2"		[ saycommand "/newent mapmodel 121" ]
+menuitem "Server cluster 3"		[ saycommand "/newent mapmodel 122" ]
+menuitem "Server cluster 4"		[ saycommand "/newent mapmodel 123" ]
+menuitem "Server cluster 5"		[ saycommand "/newent mapmodel 124" ]
+menuitem "Server cluster 6"		[ saycommand "/newent mapmodel 125" ]
 
 newmenu Street
 
@@ -203,19 +224,20 @@ menuitem "Grass 2 (Snow)"	"newent mapmodel 22"
 menuitem "Plant 1"		"newent mapmodel 23"
 menuitem "Plant 1 (Dry)"	"newent mapmodel 24"
 menuitem "Plant 1 (Snow)"	"newent mapmodel 25"
+menuitem "Tree trunk"		"newent mapmodel 130"
+menuitem "Tree 1"		"newent mapmodel 114" [ echo "3Trees are expensive mapmodels. Please only use a maximum of 1 or 2 in a map." ]
+menuitem "Tree 2"		"newent mapmodel 117" [ echo "3Trees are expensive mapmodels. Please only use a maximum of 1 or 2 in a map." ]
+menuitem "Pine tree"		"newent mapmodel 118" [ echo "3Trees are expensive mapmodels. Please only use a maximum of 1 or 2 in a map." ]
+menuitem "Palm tree"		"newent mapmodel 115" [ echo "3Trees are expensive mapmodels. Please only use a maximum of 1 or 2 in a map." ]
 
 newmenu Office
 
 menuitem "Office chair"	        	"newent mapmodel 27"
-menuitem "Computer: Laptop"     	"newent mapmodel 28"
-menuitem "Computer: PC"			"newent mapmodel 101"
-menuitem "Computer: Interfaces"		"newent mapmodel 65"
 menuitem "Locker"     			"newent mapmodel 30"
 menuitem "Air Conditioner (Outer)"	"newent mapmodel 60"
 menuitem "Air Conditioner (Inner)"	"newent mapmodel 107"
-menuitem "Communications rack"		"newent mapmodel 63"
-menuitem "Communications rack 2"	"newent mapmodel 64"
 menuitem "Office desk"			"newent mapmodel 71"
+menuitem "Ceiling fan"			"saycommand /newent mapmodel 113"
 
 newmenu Lights
 
@@ -251,6 +273,7 @@ menuitem "Wire fence"			"newent mapmodel 13"
 menuitem "Wire fencepost"		"newent mapmodel 14"
 menuitem "Open wire fence-gate"		"newent mapmodel 15" 
 menuitem "Closed wire fence-gate"	"newent mapmodel 16"
+menuitem "Barbwire fence-top"		"newent mapmodel 126"
 menuitem "" -1
 menuitem "Corrugated fence"		"newent mapmodel 102"
 menuitem "Corrugated fence 2"		"newent mapmodel 103"
