fix typo - serverdesc still "invalid vote" though
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3650 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/menus_multiplayer.cfg
+++ b/ac/config/menus_multiplayer.cfg
@@ -33,7 +33,7 @@ menuitem "Set mode/map"			"showmenu Gamemode"
 menuitem "Kick/ban player"		"showmenu kick/ban"
 menuitem "Adjust teams"			[ showmenu "Team adjustment" ]
 menuitem "Change mastermode" 		"showmenu Mastermode"
-menuitem "Change the server description" "saycommand /servdesc "
+menuitem "Change the server description" "saycommand /serverdesc "
 menuitem "Give admin"			[ showmenu "give admin" ]
 menuitem "" -1
 menuitemtextinput "Nickname:  " "result $curname" "name $arg1"
