added "flies" and "nighthawk" to defaultmapsettings and editing menu.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3655 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -606,3 +606,5 @@ mapsound "./ambience/t_waterfront.ogg" -1	// 38
 mapsound "./ambience/t_generator.ogg" -1	// 39
 mapsound "./ambience/t_electricbuzz.ogg" -1	// 40
 mapsound "./ambience/t_alarm01.ogg" -1		// 41
+mapsound "./ambience/flies.ogg" -1		// 42
+mapsound "./ambience/deserthawk.ogg" -1		// 43
