--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -362,6 +362,8 @@ menuitem "Waterfront"				[ alias ambientsoundmenu 38; showmenu "Ambient sound se
 menuitem "Generator"				[ alias ambientsoundmenu 39; showmenu "Ambient sound settings" ]
 menuitem "Electric buzz"			[ alias ambientsoundmenu 40; showmenu "Ambient sound settings" ]
 menuitem "Alarm"				[ alias ambientsoundmenu 41; showmenu "Ambient sound settings" ]
+menuitem "Flies"				[ alias ambientsoundmenu 42; showmenu "Ambient sound settings" ]
+menuitem "Desert hawk"				[ alias ambientsoundmenu 43; showmenu "Ambient sound settings" ]
 
 
 alias soundrad 1
