Updated editing menu with 2 new ambient sounds that makkE uploaded last night...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3683 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/default_map_settings.cfg
+++ b/ac/config/default_map_settings.cfg
@@ -608,3 +608,5 @@ mapsound "./ambience/t_electricbuzz.ogg" -1	// 40
 mapsound "./ambience/t_alarm01.ogg" -1		// 41
 mapsound "./ambience/flies.ogg" -1		// 42
 mapsound "./ambience/deserthawk.ogg" -1		// 43
+mapsound "./ambience/owl.ogg" -1		// 44
+mapsound "./ambience/citynoisebirds.ogg" -1	// 45
