--- a/ac/config/menus_edit.cfg
+++ b/ac/config/menus_edit.cfg
@@ -8,7 +8,7 @@ menuitem "Ambient sounds..."			[ showmenu "Ambient sounds" ]
 menuitem "Arches and slopes..."			"showmenu Arches"
 menuitem "Map operations..."			[ showmenu "Map operations" ]
 menuitem "Bots..."				[ showmenu "Creating bot waypoints" ]
-menuitem "Help?"				[ echo "2Please read the AssaultCube readme which has a detailed guide on mapediting. ]
+menuitem "Help?"				[ echo "2Please read the AssaultCube README which has a detailed guide on mapediting... ]
 
 //Lighting menu.
 newmenu "Lighting"
@@ -364,6 +364,8 @@ menuitem "Electric buzz"			[ alias ambientsoundmenu 40; showmenu "Ambient sound 
 menuitem "Alarm"				[ alias ambientsoundmenu 41; showmenu "Ambient sound settings" ]
 menuitem "Flies"				[ alias ambientsoundmenu 42; showmenu "Ambient sound settings" ]
 menuitem "Desert hawk"				[ alias ambientsoundmenu 43; showmenu "Ambient sound settings" ]
+menuitem "Owl"					[ alias ambientsoundmenu 44; showmenu "Ambient sound settings" ]
+menuitem "City birds"				[ alias ambientsoundmenu 45; showmenu "Ambient sound settings" ]
 
 
 alias soundrad 1
