add welcome message.
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3695 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/firstrun.cfg
+++ b/ac/config/firstrun.cfg
@@ -4,6 +4,12 @@ alias delayed_firstrun [
     music "pingpong/03-pp-kamikadze.ogg" (* 89 1000) " " // 90 secs, fade
     
     new_gfx_quality 2
+    echo ""
+    echo "2Welcome to AssaultCube
+    echo "2Developed by 'Rabid Viper Productions'
+    echo ""
+    echo "1Please use the below menu to change some necessary settings..."
+    echo ""
 	showmenu "QUICK setup"
 ]
 
