--- a/ac/config/menus.cfg
+++ b/ac/config/menus.cfg
@@ -131,7 +131,8 @@ menuitem "absinth				Packaging AssaultCube for Mac." -1
 menuitem "dtd				Hosting." -1
 menuitem "Grenadier (aurhat)		Small code contributions/fixes." -1
 menuitem "KanslozeClown			Code contributions and advice." -1
-menuitem "Chris Robinson		OpenAL-Soft advice." -1
+menuitem "Chris Robinson			OpenAL-Soft advice." -1
+menuitem "lewiscommunications.com	Logo, media and web support." -1
 menuitem "" -1
 menuitem "Resources" -1 
 menuitem "-----------" -1
