(commenting) Numbered sound menu for ease of use...
git-svn-id: http://svn.code.sf.net/p/actiongame/code/trunk@3708 e016b1c5-ed68-44aa-a2f7-31cac88cffde

--- a/ac/config/sounds.cfg
+++ b/ac/config/sounds.cfg
@@ -1,94 +1,98 @@
-// game sounds
-registersound "player/jump"         //S_JUMP
-registersound "player/step" 200       // S_SOFTLAND
-registersound "player/land" 250      // S_HARDLAND
-registersound "weapon/ric1"         // S_BULLETAIR1
-registersound "weapon/ric2"         // S_BULLETAIR2
-registersound "weapon/ric3"         // S_BULLETHIT
-registersound "weapon/waterimpact"      // S_BULLETWATERHIT
-registersound "weapon/knife"        //S_KNIFE
-registersound "weapon/usp"          //S_PISTOL
-registersound "weapon/pistol_reload"           //S_RPISTOL
-registersound "weapon/shotgun"      //S_SHOTGUN
-registersound "weapon/shotgun_reload"           //S_RSHOTGUN
-registersound "weapon/sub"          //S_SUBGUN
-registersound "weapon/sub_reload"           //S_RSUBGUN
-registersound "weapon/sniper"       //S_SNIPER
-registersound "weapon/sniper_reload"           //S_RSNIPER
-registersound "weapon/auto"          //S_ASSAULT
-registersound "weapon/auto_reload"           //S_RASSAULT
-registersound "misc/pickup_ammo_clip"           //S_ITEMAMMO
-registersound "misc/pickup_health"           //S_ITEMHEALTH
-registersound "misc/pickup_armour"           //S_ITEMARMOUR
-registersound "misc/tick9"           //S_ITEMPUP
-registersound "weapon/clip_empty"      //S_NOAMMO
-registersound "misc/tick11"         //S_PUPOUT
-registersound "player/pain1"        //S_PAIN1
-registersound "player/pain2"        //S_PAIN2
-registersound "player/pain3"        //S_PAIN3
-registersound "player/pain4"        //S_PAIN4
-registersound "player/pain5"        //S_PAIN5
-registersound "player/pain6"        //S_PAIN6
-registersound "player/die1"         //S_DIE1
-registersound "player/die2"         //S_DIE2
-registersound "weapon/grenade_exp"  //S_FEXPLODE
-registersound "player/splash1"      //S_SPLASH1
-registersound "player/splash2"      //S_SPLASH2
-registersound "ctf/flagdrop"       //S_FLAGDROP
-registersound "ctf/flagpickup"      //S_FLAGPICKUP
-registersound "ctf/flagreturn"      //S_FLAGRETURN
-registersound "ctf/flagscore"       //S_FLAGSCORE
-registersound "weapon/grenade_pull" // S_GRENADEPULL
-registersound "weapon/grenade_throw" // S_GRENADETHROW
-registersound "weapon/grenade_bounce1" // S_GRENADEBOUNCE1
-registersound "weapon/grenade_bounce2" // S_GRENADEBOUNCE2
-registersound "weapon/pistol_akreload" // S_RAKIMBO
-registersound "misc/change_gun"		// S_GUNCHANGE
-registersound "player/gib"			// S_GIB
-registersound "misc/headshot" 10		// S_HEADSHOT
-registersound "misc/vote/vote_call" // S_CALLVOTE
-registersound "misc/vote/vote_pass" // S_VOTEPASS
-registersound "misc/vote/vote_fail" // S_VOTEFAIL
-registersound "player/footsteps" 40 1 // S_FOOTSTEPS
-registersound "player/crouch" 40 1    // S_FOOTSTEPSCROUCH
-registersound "player/watersteps" 40 1  // S_WATERFOOTSTEPS
-registersound "player/watercrouch" 40 1 // S_WATERFOOTSTEPSCROUCH
-registersound "player/crouch_in"             // S_CROUCH
-registersound "player/crouch_out"             // S_UNCROUCH
-registersound "misc/menu_click1"        // S_MENUSELECT
-registersound "misc/menu_click2"        // S_MENUENTER
-registersound "player/underwater"       // S_UNDERWATER
-registersound "misc/tinnitus" 2           // S_TINNITUS
+// AssaultCube game sounds
 
+// This does not include ambient sounds, which are map-specific...
+// Files listed in here can be either *.wav or *.ogg
+// Filename extensions do not need to be listed.
 
-// ingame voice chat
-registersound "voicecom/affirmative"
-registersound "voicecom/allrightsir"
-registersound "voicecom/comeonmove"
-registersound "voicecom/cominginwiththeflag"
-registersound "voicecom/coverme"
-registersound "voicecom/defendtheflag"
-registersound "voicecom/enemydown"
-registersound "voicecom/gogetemboys"
-registersound "voicecom/goodjobteam"
-registersound "voicecom/igotone"
-registersound "voicecom/imadecontact"
-registersound "voicecom/imattacking"
-registersound "voicecom/imondefense"
-registersound "voicecom/imonyourteamman"
-registersound "voicecom/negative"
-registersound "voicecom/nocando"
-registersound "voicecom/recovertheflag"
-registersound "voicecom/sorry"
-registersound "voicecom/spreadout"
-registersound "voicecom/stayhere"
-registersound "voicecom/staytogether"
-registersound "voicecom/theresnowaysir"
-registersound "voicecom/wedidit"
-registersound "voicecom/yes"
-registersound "voicecom/niceshot"
+registersound "player/jump"			// 0 - S_JUMP
+registersound "player/step" 200			// 1 - S_SOFTLAND
+registersound "player/land" 250			// 2 - S_HARDLAND
+registersound "weapon/ric1"			// 3 - S_BULLETAIR1
+registersound "weapon/ric2"			// 4 - S_BULLETAIR2
+registersound "weapon/ric3"			// 5 - S_BULLETHIT
+registersound "weapon/waterimpact"		// 6 - S_BULLETWATERHIT
+registersound "weapon/knife"			// 7 - S_KNIFE
+registersound "weapon/usp"			// 8 - S_PISTOL
+registersound "weapon/pistol_reload"		// 9 - S_RPISTOL
+registersound "weapon/shotgun"			// 10 - S_SHOTGUN
+registersound "weapon/shotgun_reload"		// 11 - S_RSHOTGUN
+registersound "weapon/sub"			// 12 - S_SUBGUN
+registersound "weapon/sub_reload"		// 13 - S_RSUBGUN
+registersound "weapon/sniper"			// 14 - S_SNIPER
+registersound "weapon/sniper_reload"		// 15 - S_RSNIPER
+registersound "weapon/auto"			// 16 - S_ASSAULT
+registersound "weapon/auto_reload"		// 17 - S_RASSAULT
+registersound "misc/pickup_ammo_clip"		// 18 - S_ITEMAMMO
+registersound "misc/pickup_health"		// 19 - S_ITEMHEALTH
+registersound "misc/pickup_armour"		// 20 - S_ITEMARMOUR
+registersound "misc/tick9"			// 21 - S_ITEMPUP
+registersound "weapon/clip_empty"		// 22 - S_NOAMMO
+registersound "misc/tick11"			// 23 - S_PUPOUT
+registersound "player/pain1"			// 24 - S_PAIN1
+registersound "player/pain2"			// 25 - S_PAIN2
+registersound "player/pain3"			// 26 - S_PAIN3
+registersound "player/pain4"			// 27 - S_PAIN4
+registersound "player/pain5"			// 28 - S_PAIN5
+registersound "player/pain6"			// 29 - S_PAIN6
+registersound "player/die1"			// 30 - S_DIE1
+registersound "player/die2"			// 31 - S_DIE2
+registersound "weapon/grenade_exp"		// 32 - S_FEXPLODE
+registersound "player/splash1"			// 33 - S_SPLASH1
+registersound "player/splash2"			// 34 - S_SPLASH2
+registersound "ctf/flagdrop"			// 35 - S_FLAGDROP
+registersound "ctf/flagpickup"			// 36 - S_FLAGPICKUP
+registersound "ctf/flagreturn"			// 37 - S_FLAGRETURN
+registersound "ctf/flagscore"			// 38 - S_FLAGSCORE
+registersound "weapon/grenade_pull"		// 39 - S_GRENADEPULL
+registersound "weapon/grenade_throw"		// 40 - S_GRENADETHROW
+registersound "weapon/grenade_bounce1"		// 41 - S_GRENADEBOUNCE1
+registersound "weapon/grenade_bounce2"		// 42 - S_GRENADEBOUNCE2
+registersound "weapon/pistol_akreload"		// 43 - S_RAKIMBO
+registersound "misc/change_gun"			// 44 - S_GUNCHANGE
+registersound "player/gib"			// 45 - S_GIB
+registersound "misc/headshot" 10		// 46 - S_HEADSHOT
+registersound "misc/vote/vote_call"		// 47 - S_CALLVOTE
+registersound "misc/vote/vote_pass"		// 48 - S_VOTEPASS
+registersound "misc/vote/vote_fail"		// 49 - S_VOTEFAIL
+registersound "player/footsteps" 40 1		// 50 - S_FOOTSTEPS
+registersound "player/crouch" 40 1		// 51 - S_FOOTSTEPSCROUCH
+registersound "player/watersteps" 40 1		// 52 - S_WATERFOOTSTEPS
+registersound "player/watercrouch" 40 1		// 53 - S_WATERFOOTSTEPSCROUCH
+registersound "player/crouch_in"		// 54 - S_CROUCH
+registersound "player/crouch_out"		// 55 - S_UNCROUCH
+registersound "misc/menu_click1"		// 56 - S_MENUSELECT
+registersound "misc/menu_click2"		// 57 - S_MENUENTER
+registersound "player/underwater"		// 58 - S_UNDERWATER
+registersound "misc/tinnitus" 2			// 59 - S_TINNITUS
 
-// music
-registermusic "pingpong/03-pp-kamikadze"    // M_FLAGGRAB
-registermusic "pingpong/08-pp-headshot"     // M_LASTMINUTE1
-registermusic "ac"                          // M_LASTMINUTE2
+						// In-game voice coms
+registersound "voicecom/affirmative"		// 60
+registersound "voicecom/allrightsir"		// 61
+registersound "voicecom/comeonmove"		// 62
+registersound "voicecom/cominginwiththeflag"	// 63
+registersound "voicecom/coverme"		// 64
+registersound "voicecom/defendtheflag"		// 65
+registersound "voicecom/enemydown"		// 66
+registersound "voicecom/gogetemboys"		// 67
+registersound "voicecom/goodjobteam"		// 68
+registersound "voicecom/igotone"		// 69
+registersound "voicecom/imadecontact"		// 70
+registersound "voicecom/imattacking"		// 71
+registersound "voicecom/imondefense"		// 72
+registersound "voicecom/imonyourteamman"	// 73
+registersound "voicecom/negative"		// 74
+registersound "voicecom/nocando"		// 75
+registersound "voicecom/recovertheflag"		// 76
+registersound "voicecom/sorry"			// 77
+registersound "voicecom/spreadout"		// 78
+registersound "voicecom/stayhere"		// 79
+registersound "voicecom/staytogether"		// 80
+registersound "voicecom/theresnowaysir"		// 81
+registersound "voicecom/wedidit"		// 82
+registersound "voicecom/yes"			// 83
+registersound "voicecom/niceshot"		// 84
+
+						// Music
+registermusic "pingpong/03-pp-kamikadze"	// M_FLAGGRAB
+registermusic "pingpong/08-pp-headshot"		// M_LASTMINUTE1
+registermusic "ac"				// M_LASTMINUTE2
